catppuccin.user.css
/* ==UserStyle==
@name           Invidious Catppuccin
@namespace      github.com/catppuccin/invidious
@homepageURL    https://github.com/catppuccin/invidious
@version        0.2.01
@description    Soothing pastel theme for Invidious
@author         Catppuccin
@updateURL      https://github.com/catppuccin/invidious/raw/main/catppuccin.user.css
@preprocessor   stylus

@var select lighttheme "Light Theme" ["Latte*", "Frappe", "Macchiato", "Mocha"]
@var select darktheme "Dark Theme" ["Latte", "Frappe", "Macchiato", "Mocha*"]
@var checkbox blueaccent "Blue Accent" 0

==/UserStyle== */

@-moz-document url-prefix("https://invidious.namazso.eu"),
               url-prefix("https://inv.vern.cc"),
               url-prefix("https://invidious.projectsegfau.lt"),
               url-prefix("https://invidious.sethforprivacy.com"),
               url-prefix("https://inv.bp.projectsegfau.lt"),
               url-prefix("https://invidious.slipfox.xyz"),
               url-prefix("https://y.com.sb"),
               url-prefix("https://inv.riverside.rocks"),
               url-prefix("https://invidious.flokinet.to"),
               url-prefix("https://invidious.rhyshl.live"),
               url-prefix("https://invidious.snopyta.org"),
               url-prefix("https://invidio.xamh.de"),
               url-prefix("https://vid.puffyan.us"),
               url-prefix("https://yewtu.be"),
               url-prefix("https://invidious.nerdvpn.de"),
               url-prefix("https://invidious.tiekoetter.com"),
               url-prefix("https://invidious.esmailelbob.xyz"),
               url-prefix("https://yt.artemislena.eu"),
               url-prefix("https://inv.privacy.com.de"),
               url-prefix("https://invidious.kavin.rocks"),
               url-prefix("https://youtube.076.ne.jp"),
               url-prefix("https://invidious.thewatcherpi.de") {

  colourscheme(flavour) {

    if (flavour=="Latte") {
      --ctp-rosewater: #dc8a78;
      --ctp-flamingo: #dd7878;
      --ctp-pink: #ea76cb;
      --ctp-mauve: #8839ef;
      --ctp-red: #d20f39;
      --ctp-maroon: #e64553;
      --ctp-peach: #fe640b;
      --ctp-yellow: #df8e1d;
      --ctp-green: #40a02b;
      --ctp-teal: #179299;
      --ctp-sky: #04a5e5;
      --ctp-sapphire: #209fb5;
      --ctp-blue: #1e66f5;
      --ctp-lavender: #7287fd;
      --ctp-text: #4c4f69;
      --ctp-subtext1: #5c5f77;
      --ctp-subtext0: #6c6f85;
      --ctp-overlay2: #7c7f93;
      --ctp-overlay1: #8c8fa1;
      --ctp-overlay0: #9ca0b0;
      --ctp-surface2: #acb0be;
      --ctp-surface1: #bcc0cc;
      --ctp-surface0: #ccd0da;
      --ctp-base: #eff1f5;
      --ctp-mantle: #e6e9ef;
      --ctp-crust: #dce0e8;
      --ctp-text-inverted: var(--ctp-base);
    }

    if (flavour=="Frappe") {
      --ctp-rosewater: #f2d5cf;
      --ctp-flamingo: #eebebe;
      --ctp-pink: #f4b8e4;
      --ctp-mauve: #ca9ee6;
      --ctp-red: #e78284;
      --ctp-maroon: #ea999c;
      --ctp-peach: #ef9f76;
      --ctp-yellow: #e5c890;
      --ctp-green: #a6d189;
      --ctp-teal: #81c8be;
      --ctp-sky: #99d1db;
      --ctp-sapphire: #85c1dc;
      --ctp-blue: #8caaee;
      --ctp-lavender: #babbf1;
      --ctp-text: #c6d0f5;
      --ctp-subtext1: #b5bfe2;
      --ctp-subtext0: #a5adce;
      --ctp-overlay2: #949cbb;
      --ctp-overlay1: #838ba7;
      --ctp-overlay0: #737994;
      --ctp-surface2: #626880;
      --ctp-surface1: #51576d;
      --ctp-surface0: #414559;
      --ctp-base: #303446;
      --ctp-mantle: #292c3c;
      --ctp-crust: #232634;
      --ctp-text-inverted: var(--ctp-crust);
    }

    if (flavour=="Macchiato") {
      --ctp-rosewater: #f4dbd6;
      --ctp-flamingo: #f0c6c6;
      --ctp-pink: #f5bde6;
      --ctp-mauve: #c6a0f6;
      --ctp-red: #ed8796;
      --ctp-maroon: #ee99a0;
      --ctp-peach: #f5a97f;
      --ctp-yellow: #eed49f;
      --ctp-green: #a6da95;
      --ctp-teal: #8bd5ca;
      --ctp-sky: #91d7e3;
      --ctp-sapphire: #7dc4e4;
      --ctp-blue: #8aadf4;
      --ctp-lavender: #b7bdf8;
      --ctp-text: #cad3f5;
      --ctp-subtext1: #b8c0e0;
      --ctp-subtext0: #a5adcb;
      --ctp-overlay2: #939ab7;
      --ctp-overlay1: #8087a2;
      --ctp-overlay0: #6e738d;
      --ctp-surface2: #5b6078;
      --ctp-surface1: #494d64;
      --ctp-surface0: #363a4f;
      --ctp-base: #24273a;
      --ctp-mantle: #1e2030;
      --ctp-crust: #181926;
      --ctp-text-inverted: var(--ctp-crust);
    }

    if (flavour=="Mocha") {
      --ctp-rosewater: #f5e0dc;
      --ctp-flamingo: #f2cdcd;
      --ctp-pink: #f5c2e7;
      --ctp-mauve: #cba6f7;
      --ctp-red: #f38ba8;
      --ctp-maroon: #eba0ac;
      --ctp-peach: #fab387;
      --ctp-yellow: #f9e2af;
      --ctp-green: #a6e3a1;
      --ctp-teal: #94e2d5;
      --ctp-sky: #89dceb;
      --ctp-sapphire: #74c7ec;
      --ctp-lavender: #b4befe;
      --ctp-blue: #89b4fa;
      --ctp-text: #cdd6f4;
      --ctp-subtext1: #bac2de;
      --ctp-subtext0: #a6adc8;
      --ctp-overlay2: #9399b2;
      --ctp-overlay1: #7f849c;
      --ctp-overlay0: #6c7086;
      --ctp-surface2: #585b70;
      --ctp-surface1: #45475a;
      --ctp-surface0: #313244;
      --ctp-base: #1e1e2e;
      --ctp-mantle: #181825;
      --ctp-crust: #11111b;
      --ctp-text-inverted: var(--ctp-crust);
    }

  }



  .light-theme {
    if (lighttheme=="Latte")     { colourscheme(Latte) }
    if (lighttheme=="Frappe")    { colourscheme(Frappe) }
    if (lighttheme=="Macchiato") { colourscheme(Macchiato) }
    if (lighttheme=="Mocha")     { colourscheme(Mocha) }
  }


  .dark-theme {
    if (darktheme=="Latte")     { colourscheme(Latte) }
    if (darktheme=="Frappe")    { colourscheme(Frappe) }
    if (darktheme=="Macchiato") { colourscheme(Macchiato) }
    if (darktheme=="Mocha")     { colourscheme(Mocha) }
  }



  body {
    if (blueaccent) {
      --ctp-link-colour: var(--ctp-blue);
      --ctp-link-hover: var(--ctp-teal);
    } else {
      --ctp-link-colour: var(--ctp-rosewater);
      --ctp-link-hover: var(--ctp-flamingo);
    }
  }





  body {
    background-color: var(--ctp-base) !important;
    color: var(--ctp-text) !important;
  }

  a,
  a:not([data-id]) > .icon,
  .pure-u-lg-1-5 > .h-box > a[href^="/watch?"],
  .playlist-restricted > ol > li > a { color: var(--ctp-link-colour) !important; }

  a:hover,
  a:active,
  summary:hover,
  a:not([data-id]):hover > .icon,
  .pure-u-lg-1-5 > .h-box > a[href^="/watch?"]:hover,
  .playlist-restricted > ol > li > a:hover { color: var(--ctp-link-hover) !important; }

  .searchbar input {
    background-color: inherit !important;
    color: inherit !important;
  }

  button.pure-button-primary,
  body a.pure-button-primary {
    background-color: var(--ctp-surface1) !important;
    color: var(--ctp-text) !important;
  }

  button.pure-button-primary:hover,
  button.pure-button-primary:focus,
  body a.pure-button-primary:hover,
  body a.pure-button-primary:focus {
    background-color: var(--ctp-surface2) !important;
    color: var(--ctp-text) !important;
  }

  #subscribe {
    background-color: var(--ctp-link-colour) !important;
    color: var(--ctp-text-inverted) !important;
  }

  #subscribe:hover,
  #subscribe:focus {
    background-color: var(--ctp-link-hover) !important;
    color: var(--ctp-text-inverted) !important;
  }


  .video-js .vjs-control-bar,
  .vjs-menu-button-popup .vjs-menu .vjs-menu-content { background-color: var(--ctp-crust) !important; }

  .video-js .vjs-control-bar,
  .vjs-menu-button-popup .vjs-menu .vjs-menu-content { color: var(--ctp-text) !important; }

  .video-js .vjs-slider:hover,
  .video-js button:hover { color: var(--ctp-green) m !important; }

  .video-js .vjs-slider { background-color: var(--ctp-surface2) !important; }

  .video-js .vjs-load-progress,
  .video-js .vjs-load-progress div { background-color: var(--ctp-surface2) !important; }

  .video-js.player-style-invidious .vjs-play-progress { background-color: var(--ctp-green) !important; }

  .vjs-menu li.vjs-menu-item:focus,
  .vjs-menu li.vjs-menu-item:hover {
    background-color: var(--ctp-surface0) !important;
    color: var(--ctp-text) !important;
  }

  .vjs-menu li.vjs-selected,
  .vjs-menu li.vjs-selected:focus,
  .vjs-menu li.vjs-selected:hover { background-color: var(--ctp-blue) !important; }

  .vjs-menu li.vjs-selected,
  .vjs-menu li.vjs-selected:focus,
  .vjs-menu li.vjs-selected:hover,
  .js-focus-visible .vjs-menu li.vjs-selected:hover { color: var(--ctp-text-inverted) !important; }


  #related-videos > .h-box > div:not(#autoplay-controls) { margin-bottom: 48px !important; }

  footer,
  footer a { color: var(--ctp-subtext0) !important; }

}

